# multipleye-preprocessing

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  concatenate_aoi_files.py  concatenated_aoi_no_questions.csv  fixation_correction_test.ipynb  high-level-TODOs  multipleye_settings_preprocessing.yaml  peyeplineAS.py  prepare_language_folder.py  preprocessing-AS.ipynb  preprocessing.ipynb  pyproject.toml  repo-map.md  requirements.txt  run_merid_preprocessing.py  run_merid_sanity_checks.py  run_multipleye_preprocessing.py  run_multipleye_sanity_checks.py  sanity_check_guide.ipynb  settings_preprocessing.yaml
.github/actions/setup-uv/: action.yml
.github/workflows/: docs.yml  pre-commit.yml  tests.yml
docs/: conf.py  getting_started.md  index.md  refs.bib
docs/guide/: configuration.md  index.md  preprocessing.md  psychometric_tests.md  reading_measures.md  technical_architecture.md
preprocessing/: __init__.py  api.py  config.py  constants.py  multipleye_pEYEpline.ipynb  multipleye_pEYEpline_AS.ipynb  peyepeline.py  peyepline-AS.py
preprocessing/answers/: __init__.py  collect.py  io.py  parser.py
preprocessing/checks/: et_quality_checks.py  formal_experiment_checks.py
preprocessing/data_collection/: __init__.py  data_collection.py  experiment_frame.py  merid_data_collection.py  multipleye_data_collection.py  session.py  stimulus.py  trial.py
preprocessing/events/: __init__.py  detect.py  drift_algorithms.py  fixation_correction.py  properties.py
preprocessing/io/: __init__.py  load.py  save.py
preprocessing/mapping/: __init__.py  aoi.py
preprocessing/metrics/: RM-list.txt  fixations.py  reading_measures.py  words.py
preprocessing/old/: report_unused.py  sanity_unused.py
preprocessing/plotting/: plot.py
preprocessing/psychometric_tests/: preprocess_psychometric_tests.py
preprocessing/scripts/: __init__.py  prepare_language_folder.py  psychometric_tests.py  restructure_psycho_tests.py  run_merid_preprocessing.py  run_merid_sanity_checks.py  run_multipleye_preprocessing.py  run_multipleye_sanity_checks.py
preprocessing/signals/: __init__.py  preprocess.py
preprocessing/utils/: __init__.py  add_custom_uoa_to_aois.py  conversion.py  data_collection_utils.py  data_path_utils.py  fix_pq_data.py  logging.py  prepare_language_folder.py  restructure_psycho_tests.py
quality-report/: data_collection.py  et_quality_checks.py  experiment_frame.py  formal_experiment_checks.py  multipleye_data_collection.py  multipleye_pEYEpline.ipynb  plot.py  stimulus.py
quality_report/: data_collection.py  experiment_frame.py  formal_experiment_checks.py  multipleye_data_collection.py  plot.py
quality_report/checks/: et_quality_checks.py
templates_and_notes/: How to write docs.md  LENAs_pEYEpline.ipynb  high-level-TODOs  mail_template.md  mock_report.txt  personal_notes.md  preprocessing-And-AS.ipynb  preprocessing.ipynb
tests/: conftest.py  test_data_collection.py  test_experiment_frame.py  test_multipleye_data_collection.py
tests/MultiplEYE_toy_X_x_1_1/: RANDOMIZATION.md
tests/MultiplEYE_toy_X_x_1_1/quality_reports/: test_Experiment_frame.csv
tests/psychometric_tests/: test_preprocess_psychometric_tests.py
tests/unit/data_collection/: test_ignored_folders.py
(+36 files in other folders)
