[project]
name = "preprocessing"
version = "0.1.0"
description = "Pipeline for Multipleye data preprocessing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.8.4",
    "numpy~=1.26.4",
    "pandas~=2.2.2",
    "pillow==10.4.0",
    "polars>=1.28.1",
    "pymovements",
    "tqdm~=4.66.4",
    "openpyxl>=3.0.0",
]

[tool.uv.sources]
pymovements = { git = "https://github.com/pymovements/pymovements.git", branch = "main" }

[tool.setuptools.packages.find]
include = ["preprocessing"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
