[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "preprocessing"
version = "0.2.0"
description = "Pipeline for Multipleye data preprocessing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.8.4",
    "numpy~=1.26.4",
    "pandas~=2.2.2",
    "pillow==10.4.0",
    "polars>=1.28.1",
    "pymovements",
    "tqdm~=4.66.4",
    "openpyxl>=3.0.0",
    "ipykernel>=7.1.0",
]

[tool.uv.sources]
pymovements = { git = "https://github.com/pymovements/pymovements.git", branch = "main" }

[tool.setuptools.packages.find]
include = ["preprocessing"]

[dependency-groups]
dev = [{ include-group = "lint" }, { include-group = "docs" }]
lint = [
    "pre-commit>=4.5.1",
    "pytest>=7.0.0",
    "ruff>=0.13.0",
]
docs = [
    "myst-nb>=1.3.0",
    "sphinx>=8.0.0",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-book-theme>=1.1.4",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinxcontrib-bibtex>=2.6.5",
]

[project.scripts]
restructure_psychometric_tests = "preprocessing.scripts.restructure_psycho_tests:main"
prepare_language_folder = "preprocessing.scripts.prepare_language_folder:main"
preprocess_psychometric_tests = "preprocessing.scripts.psychometric_tests:process_all_psychometric_test_sessions"
# Pipelines
run_multipleye_preprocessing = "preprocessing.scripts.run_multipleye_preprocessing:main"
run_merid_preprocessing = "preprocessing.scripts.run_merid_preprocessing:main"
run_multipleye_sanity_checks = "preprocessing.scripts.run_multipleye_sanity_checks:main"
run_merid_sanity_checks = "preprocessing.scripts.run_merid_sanity_checks:main"
